改一下sp的保存
1.1

--- a/GoogleMapDemo/app/build.gradle
+++ b/GoogleMapDemo/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.0"
     defaultConfig {
-        applicationId "project.ismine.xufeng.com.glibaryproject"
+        applicationId "project.ismine.xufeng.com.googlemapdemo"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
@@ -17,10 +17,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    lintOptions {
-        abortOnError false
-    }
 }
 
 dependencies {
@@ -29,7 +25,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.google.android.gms:play-services-maps:11.0.1'
     testCompile 'junit:junit:4.12'
-    compile project(':GeneralFrameworklibary')
 }
