--- a/GlibaryProject/GeneralFrameworklibary/build.gradle
+++ b/GlibaryProject/GeneralFrameworklibary/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.novoda.bintray-release'//添加
 android {
     compileSdkVersion 25
     buildToolsVersion '25.0.2'
@@ -14,7 +15,18 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
     }
+
+    lintOptions {
+        abortOnError false
+    }
+
+    tasks.withType(Javadoc) {
+        options.addStringOption('Xdoclint:none', '-quiet')
+        options.addStringOption('encoding', 'UTF-8')
+    }
+
 }
 
 dependencies {
@@ -22,109 +34,34 @@ dependencies {
     compile files('libs/gson-2.2.4.jar')
     compile 'com.squareup.okhttp3:okhttp:3.3.1'
     compile 'com.jcodecraeer:xrecyclerview:1.2.7'
+    compile 'com.nineoldandroids:library:2.4.0'
     compile files('libs/systembartint-1.0.4.jar')
 }
 
 /** 以下开始是将Android Library上传到jcenter的相关配置**/
 
-apply plugin: 'com.github.dcendents.android-maven'
-apply plugin: 'com.jfrog.bintray'
-
 //项目主页
-//def siteUrl = 'https://github.com/linglongxin24/SQLite'    // project homepage
+def siteUrl = 'https://github.com/xufengp420/libary-x01'    // project homepage
 //项目的版本控制地址
-//def gitUrl = 'https://github.com/linglongxin24/SQLite.git' // project git
-def siteUrl =''
-def gitUrl =''
+def gitUrl = 'https://github.com/xufengp420/libary-x01.git' // project git
 
-//发布到组织名称名字，必须填写
-group = "com.xufeng.ismine"
-//发布到JCenter上的项目名字，必须填写
-def libName = "Glibary"
-// 版本号，下次更新是只需要更改版本号即可
-version = "1.0"
-/**  上面配置后上传至jcenter后的编译路径是这样的： compile 'cn.bluemobi.dylan:sqlitelibrary:1.0'  **/
-
-//生成源文件
-task sourcesJar(type: Jar) {
-    from android.sourceSets.main.java.srcDirs
-    classifier = 'sources'
-}
-//生成文档
-task javadoc(type: Javadoc) {
-    source = android.sourceSets.main.java.srcDirs
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-    options.encoding "UTF-8"
-    options.charSet 'UTF-8'
-    options.author true
-    options.version true
-    options.links "https://github.com/linglongxin24/FastDev/tree/master/mylibrary/docs/javadoc"
-    failOnError false
+//添加
+publish {
+    userOrg = '357420963xufeng@sina.com'//bintray.com用户名
+    repoName = 'maven'
+    groupId = 'com.glibaryproject'//jcenter上的路径
+    artifactId = 'Glibrary'//项目名称
+    publishVersion = '1.0.0'//版本号
+    desc = 'Oh hi, this is a nice description for a project, right?'//描述，不重要
+    website = 'https://github.com/xufengp420/libary-x01'//网站，不重要；尽量模拟github上的地址，例如我这样的；当然你有地址最好了
 }
 
-//文档打包成jar
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
-//拷贝javadoc文件
-task copyDoc(type: Copy) {
-    from "${buildDir}/docs/"
-    into "docs"
-}
-
-//上传到jcenter所需要的源码文件
-artifacts {
-    archives javadocJar
-    archives sourcesJar
-}
-
-// 配置maven库，生成POM.xml文件
-install {
-    repositories.mavenInstaller {
-        // This generates POM.xml with proper parameters
-        pom {
-            project {
-                packaging 'aar'
-                name 'This is a android framework'
-                url siteUrl
-                licenses {
-                    license {
-                        name 'This is a android framework'
-                        url 'https://github.com/linglongxin24/SQLite'
-                    }
-                }
-                developers {
-                    developer {
-                        id 'xufeng'
-                        name 'xufeng'
-                        email '877545130@qq.com'
-                    }
-                }
-                scm {
-                    connection gitUrl
-                    developerConnection gitUrl
-                    url siteUrl
-                }
-            }
+allprojects {
+    tasks.withType(Javadoc) {
+        options{
+            encoding "UTF-8"
+            charSet 'UTF-8'
+            links "http://docs.oracle.com/javase/7/docs/api"
         }
-    }
-}
-
-//上传到jcenter
-Properties properties = new Properties()
-properties.load(project.rootProject.file('local.properties').newDataInputStream())
-bintray {
-    user = properties.getProperty("bintray.user")    //读取 local.properties 文件里面的 bintray.user
-    key = properties.getProperty("bintray.apikey")   //读取 local.properties 文件里面的 bintray.apikey
-    configurations = ['archives']
-    pkg {
-        repo = "maven"
-        name = libName    //发布到JCenter上的项目名字，必须填写
-        desc = 'This is a android framework'    //项目描述
-        websiteUrl = siteUrl
-        vcsUrl = gitUrl
-        licenses = ["Apache-2.0"]
-        publish = true
     }
 }
