--- a/XiMalayaDemo/app/build.gradle
+++ b/XiMalayaDemo/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.0"
     defaultConfig {
-        applicationId "project.ismine.xufeng.com.glibaryproject"
+        applicationId "project.ismine.xufeng.com.ximalayademo"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
@@ -17,19 +17,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    lintOptions {
-        abortOnError false
-    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
-    compile project(':GeneralFrameworklibary')
+    compile 'com.yanzhenjie:recyclerview-swipe:1.0.4'
+    compile files('libs/gson-2.8.0.jar')
+    compile files('libs/okhttp-3.3.1.jar')
+    compile files('libs/okio-1.8.0.jar')
+    compile files('libs/TingPhoneOpenSDK_5.5.4.jar')
 }
